--- a/oua_app48/pubspec.yaml
+++ b/oua_app48/pubspec.yaml
@@ -58,6 +58,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/images/google.png
+  - assets/images/logo.png
+  - assets/images/profile.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
