--- a/oua_app48/android/app/src/main/AndroidManifest.xml
+++ b/oua_app48/android/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBWtigYT08SdnvZuW1aZoQ7MBwDX6S9kXo"/>
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility?hl=en and
