--- a/oua_app48/pubspec.yaml
+++ b/oua_app48/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.2.1
   cupertino_icons: ^1.0.6
+  google_maps_flutter: ^2.6.0
  
 dev_dependencies:
   flutter_test:
