--- a/oua_app48/pubspec.yaml
+++ b/oua_app48/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.2.1
   cupertino_icons: ^1.0.6
+  flutter_swiper_null_safety: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +61,7 @@ flutter:
   - assets/images/google.png
   - assets/images/logo.png
   - assets/images/profile.png
+  
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
