Fixes And Added İntroduction İmages

--- a/oua_app48/pubspec.yaml
+++ b/oua_app48/pubspec.yaml
@@ -62,8 +62,12 @@ flutter:
   - assets/images/google.png
   - assets/images/logo.png
   - assets/images/profile.png
+  - assets/images/image1.png
+  - assets/images/image2.png
+  - assets/images/image3.png
+  - assets/images/image4.png
   
-
+  
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
