--- a/oua_app48/pubspec.yaml
+++ b/oua_app48/pubspec.yaml
@@ -59,15 +59,20 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - assets/images/google.png
-  - assets/images/logo.png
-  - assets/images/profile.png
-  - assets/images/image1.png
-  - assets/images/image2.png
-  - assets/images/image3.png
-  - assets/images/image4.png
-  
-  
+    - assets/images/google.png
+    - assets/images/logo.png
+    - assets/images/profile.png
+    - assets/images/image1.png
+    - assets/images/image2.png
+    - assets/images/image3.png
+    - assets/images/image4.png
+    - assets/images/insan1.png
+    - assets/images/insan2.png
+    - assets/images/insan3.png
+    - assets/images/profile_photo.png
+    - assets/images/konum1.png
+    - assets/images/konum2.png
+    - assets/images/konum3.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
